# rag

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  HIGH_VOLUME_READINESS_CHECKLIST.md  IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml  pyproject.toml  rag-industry-standard-rag-plan.md
data/corpus/: rag-basics.md
data/eval/: questions.json
docker/: entrypoint.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css  types.ts
frontend/src/components/ui/: Badge.tsx  Card.tsx  Stepper.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AdminDashboard.tsx  Login.tsx  Search.tsx
frontend/src/styles/: STYLE_GUIDE.md  tokens.css
src/ragstack/: __init__.py  __main__.py  api.py  bootstrap.py  cli.py  config.py  models.py  ops_log.py  prompting.py  providers.py  qdrant_store.py  rerankers.py  retrieval.py  text_utils.py
src/ragstack/langchain_pipeline/: __init__.py  pipeline.py  runtime.py
src/ragstack/manual/: __init__.py  loaders.py  pipeline.py
tests/: test_api.py  test_ragstack.py
